<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="#AAFF72"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_frofile"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/buddha_logo" />

            <TextView
                android:id="@+id/texthere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/full_name"
                android:textSize="30sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/resetpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:text="@string/reset_password"
                android:textSize="20sp" />

            <Button
                android:id="@+id/logginout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="Logout"
                android:textSize="20sp" />


        </LinearLayout>



    </LinearLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:id="@+id/bottom_nav"
        android:layout_height="56dp"
        app:menu="@menu/bottom_menu"
        android:elevation="5dp"
        android:background="#66D8E6"
        android:layout_alignParentBottom="true"
        />





</RelativeLayout>




